--- a/01_RaspberryPi/airobo_interfaces/CMakeLists.txt
+++ b/01_RaspberryPi/airobo_interfaces/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/AiroboGoalPose.srv"
+  "srv/AiroboAuthWally.srv"
 )
 
 if(BUILD_TESTING)
