--- a/01_RaspberryPi/airobo_description/CMakeLists.txt
+++ b/01_RaspberryPi/airobo_description/CMakeLists.txt
@@ -23,7 +23,7 @@ find_package(ament_cmake REQUIRED)
 find_package(urdf REQUIRED)
 
 install(
-  DIRECTORY src launch rviz
+  DIRECTORY launch rviz urdf
   DESTINATION share/${PROJECT_NAME}
 )
 
